--- a/documentation/docs/concepts/assemblers.mdx
+++ b/documentation/docs/concepts/assemblers.mdx
@@ -263,6 +263,11 @@ This is a pretty basic example but the same pattern should apply to more complex
 
 ## AssemblerQueryService
 
+:::info
+This section only applies if you are manually defining your Resolver.
+If you are using the `NestjsQueryGraphQLModule` an `AssemblerQueryService` will automatically be created.
+:::
+
 To use your assembler you need to create an `AssemblerQueryService` that will wrap a `QueryService` to translate back and forth.
 
 This example wraps a `QueryService` to assemble to `UserDTO` and `UserEntity`.
@@ -283,7 +288,6 @@ export class UserService extends AssemblerQueryService<UserDTO, UserEntity> {
   }
 }
 ```
-
 
 Your resolver should then use the `UserService` to fetch records.
 
